# CoSimIO

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  configure.sh  license.txt  notes  todo
benchmarks/: CMakeLists.txt  communication_benchmark.cpp
co_sim_io/c/: CMakeLists.txt  co_sim_c_io.cpp  co_sim_c_io.h  co_sim_io_c.cpp  co_sim_io_c.h  co_sim_io_c_info.h  co_sim_io_c_model_part.h  co_sim_io_c_mpi.cpp  co_sim_io_c_mpi.h  define_c.h
co_sim_io/fortran/: CMakeLists.txt  co_sim_io.f90  test.f90
co_sim_io/python/: CMakeLists.txt  co_sim_io_python.cpp  co_sim_io_python_mpi.cpp  connection_status_to_python.hpp  info_to_python.hpp  model_part_to_python.hpp  mpi4py_interface.hpp  mpi_comm_holder.hpp  vector_to_python.hpp  version_to_python.hpp
docs/: index.md  (+4 more)
examples/: CMakeLists.txt  README.md
examples/mpi_solver/python/: solver.py
examples/simple_solver/c/: CMakeLists.txt  simple_solver.c
examples/simple_solver/cpp/: CMakeLists.txt  simple_solver.cpp  solver.cpp
examples/simple_solver/fortran/: CMakeLists.txt  simple_solver.f90
examples/simple_solver/python/: simple_solver.py
tests/: CMakeLists.txt  compiled_config.json.in  filter_valgrind_suppressions.py  run_all_tests.py  run_python_tests.py  test_fail.cpp  test_runner_c.c  test_runner_cpp.cpp  test_success.cpp  testing_utilities.py  valgrind_suppressions.supp
tests/benchmarking/: profile_export.cpp  profile_import.cpp
tests/co_sim_io/: main_test.cpp  test_co_sim_io.py
tests/co_sim_io/c/: checks.h  test_info.c  test_info_bool.c  test_info_clear.c  test_info_double.c  test_info_erase.c  test_info_int.c  test_info_multiple_vals.c  test_info_print.c  test_info_size.c  test_info_string.c
tests/co_sim_io/c/info/: test_info_bool.c  test_info_clear.c  test_info_copy.c  test_info_double.c  test_info_erase.c  test_info_info.c  test_info_int.c  test_info_multiple_vals.c  test_info_print.c  test_info_size.c  test_info_string.c
tests/co_sim_io/c/model_part/: test_model_part.c  test_model_part_create_multiple.c  test_model_part_element.c  test_model_part_ghost.c  test_model_part_node.c
tests/co_sim_io/c/mpi/: dummy_mpi_test.c
tests/co_sim_io/communication/: test_file_communication.cpp
tests/co_sim_io/cpp/: co_sim_io_testing.cpp  co_sim_io_testing.hpp  main_test.cpp  test_code_location.cpp  test_communication.cpp  test_data_communicator.cpp  test_data_container.cpp  test_include_co_sim_io_1.cpp  test_info.cpp  test_model_part.cpp  test_serializer.cpp  test_utilities.cpp  test_vtk_utilities.cpp
tests/co_sim_io/cpp/mpi/: main_mpi_test.cpp  test_case_for_mpi.cpp  test_mpi_data_communicator.cpp
tests/co_sim_io/fortran/: connect_disconnect.f90
tests/co_sim_io/impl/: co_sim_io_testing.hpp  data_communicator_tests_serial_distributed.hpp  main_test.cpp  test_communication.cpp  test_connection_settings.cpp  test_data_communicator.cpp  test_data_container.cpp  test_include_co_sim_io_1.cpp  test_include_co_sim_io_2.cpp  test_info.cpp  test_model_part.cpp  test_serializer.cpp
tests/co_sim_io/impl/communication/: test_file_communication.cpp
tests/co_sim_io/impl/mpi/: main_mpi_test.cpp  test_case_for_mpi.cpp  test_data_communicator.cpp  test_mpi_data_communicator.cpp
tests/co_sim_io/impl/singleton_tests/: CMakeLists.txt  main.cpp  main2.cpp  main_partner.cpp  sub_1.cpp  sub_1.hpp  sub_12.cpp
tests/co_sim_io/internals/: test_info.cpp
tests/co_sim_io/python/: __init__.py  test_info.py  test_misc.py  test_model_part.py  test_vector.py
tests/integration_tutorials/: __init__.py
tests/integration_tutorials/c/: connect_disconnect_a.c  connect_disconnect_b.c  data_exchange.c  export_data.c  export_import_data.c  export_import_mesh.c  export_info.c  export_mesh.c  hello.c  import_data.c  import_info.c  import_mesh.c  mapping.c  mesh_exchange.c
tests/integration_tutorials/c/mpi/: connect_disconnect_mpi_a.c  connect_disconnect_mpi_b.c  export_data_mpi.c  export_info_mpi.c  export_mesh_mpi.c  import_data_mpi.c  import_info_mpi.c  import_mesh_mpi.c
tests/integration_tutorials/cpp/: connect_disconnect_a.cpp  connect_disconnect_b.cpp  data_exchange.cpp  data_exchange_testing_matrix.hpp  export_data.cpp  export_info.cpp  export_mesh.cpp  hello.cpp  import_data.cpp  import_info.cpp  import_mesh.cpp  mesh_exchange.cpp  model_part_speed_test.cpp  run.cpp  runner.cpp
tests/integration_tutorials/cpp/mpi/: connect_disconnect_mpi_a.cpp  connect_disconnect_mpi_b.cpp  data_exchange_testing_matrix_mpi.hpp  data_exchange_testing_matrix_mpi_only.hpp  export_data_mpi.cpp  export_data_mpi_pro.cpp  export_data_mpi_pro_mpi.cpp  export_info_mpi.cpp  export_mesh_mpi.cpp  import_data_mpi.cpp  import_data_mpi_pro.cpp  import_data_mpi_pro_mpi.cpp  import_info_mpi.cpp  import_mesh_mpi.cpp
tests/integration_tutorials/fortran/: hello.f90
tests/integration_tutorials/python/: connect_disconnect_a.py  connect_disconnect_b.py  data_exchange.py  export_data.py  export_info.py  export_mesh.py  hello.py  import_data.py  import_info.py  import_mesh.py  mesh_exchange.py  run.py  runner.py  test_python_interface.py
tests/integration_tutorials/python/mpi/: connect_disconnect_a_mpi.py  connect_disconnect_b_mpi.py  export_data_mpi.py  export_info_mpi.py  export_mesh_mpi.py  import_data_mpi.py  import_info_mpi.py  import_mesh_mpi.py  (+1 more)
tests/interface/: interface_tests.py  test_interfaces.py
tests/solver_integration/c/: connect_disconnect.c  export_data.c  export_mesh.c  hello.c  import_data.c  import_mesh.c
tests/solver_integration/c_solver/: hello.c
tests/solver_integration/cpp_solver/: connect_disconnect.cpp  export_data.cpp  export_mesh.cpp  hello.cpp  import.cpp  import_data.cpp  import_mesh.cpp
tests/solver_integration/hello/: solver.cpp
tests/solver_integration/python/: export_data.py  export_mesh.py  import_mesh.py  test_python_interface.py
tests/solver_integration/python_solver/: connect_disconnect.py  export_data.py  export_mesh.py  hello.py  import_data.py  import_mesh.py  run_tests.py  test_python_interface.py
tests/test_runners/: test_runner.c  test_runner.cpp  test_runner.f90  test_runner_c.c  test_runner_cpp.cpp
(+246 files in other folders)
